GNOME Bugzilla – Bug 679460
segfaults when creating a subfolder
Last modified: 2013-08-22 16:15:50 UTC
Created attachment 218109 [details] [review] Patch against brasero 3.4.1 Hi, We've got this confirmed bug report at Debian: http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=659061 1. Create a data project 2. Add a folder with some files in it 3. Select a file inside this folder 4. Press on the "new folder" button 5. Enter a name and hit enter 6. Segfault A 1-line patch is attached. The bug and the patch apply from 3.2.0 to 3.4.1. Regards, Thibaut.
Could the developers please apply this patch? It is still present in 3.6.
Thanks for the patch, applied & pushed to master.