brasero-data-project: Fixed segfault when renaming or removing folder in...

project.

When adding folder from filesystem to project and creating new folder in
this folder, removing or renaming causes segfault.
This happens because new folder must have flag 'is_grafted' (project node
not from real file or folder), but code in brasero-data-project.c in
function brasero_data_project_add_node_real doesn't handle nodes with flag
'is_fake' correctly (new empty folder has this flag). Node isn't marked as
grafted with function brasero_file_node_graft. I've just added call of this
function.

https://bugzilla.gnome.org/show_bug.cgi?id=679460