libbrasero-burn/brasero-data-project.c
@@ -1679,6 +1679,7 @@ brasero_data_project_add_node_real (BraseroDataProject *self,
 		/* The node is a fake directory; graft it as well as all the 
 		 * nodes already in the tree with the same URI */
 		graft = brasero_data_project_uri_graft_nodes (self, uri);
+		brasero_file_node_graft (node, graft);
 	}
 	else {
 		gchar *parent_uri;
